2016-09-26  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/changeframerate.cc:
	* plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc:
	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/errorchecking/errorcheckingpreferences.h:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	* plugins/actions/joindocument/joindocument.cc:
	* plugins/actions/movesubtitles/movesubtitles.cc:
	* plugins/actions/plaintext/plaintext.cc:
	* plugins/actions/preferences/preferencesplugin.cc:
	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	* plugins/actions/spellchecking/spellchecking.cc:
	* plugins/actions/splitdocument/splitdocument.cc:
	* plugins/actions/styleeditor/styleeditor.cc:
	* plugins/actions/template/template.cc:
	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	* plugins/actions/viewmanager/viewmanager.cc:
	* src/gui/comboboxencoding.cc:
	* src/gui/dialogcharactercodings.cc:
	* src/gui/dialogcharactercodings.h:
	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	* src/spellchecker.h:
	* src/subtitleformatsystem.cc:
	Replace std::auto_ptr with std::unique_ptr.

2016-09-26  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	* src/subtitle.cc:
	Fix sr #3373: Compiling subtitleeditor-0.52.1 '--disable-nls' fails with '/usr/include/libintl.h' errors : Peter Levine <nsane457>

2016-07-30  kitone  <kitone@gna.org>

	* configure.ac:
	Preparing 0.53.0 release.

2016-07-30  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Fix warning with the automake options subdir-objects.

2016-07-30  kitone  <kitone@gna.org>

	* plugins/actions/template/Makefile.am:
	Use AM_CPPFLAGS instead of INCLUDES.

2016-07-30  kitone  <kitone@gna.org>

	* plugins/actions/insertsubtitlefromkeyframe/insertsubtitlefromkeyframe.cc: